--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,1 +1,1 @@
-<leaflet defaults="defaults" geojson="geojson" height="100vh" width="100%"></leaflet>
+<leaflet defaults="defaults" center="center" bounds="bounds" geojson="geojson" height="100vh" width="100%"></leaflet>
