--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,3 +11,72 @@
 body {
   margin: 0;
 }
+body, .leaflet-container {
+  font-family: franklin-gothic-urw;
+  font-weight: 400;
+}
+.leaflet-container {
+}
+
+// Incident popup window
+.incidentPopup {
+  .leaflet-popup-tip, .leaflet-popup-content-wrapper {
+    background: rgba(255,255,255,0.9);
+  }
+  .leaflet-popup-content-wrapper {
+    border-radius: 3px;
+    color: rgb(36,40,25);
+  }
+  a {
+    &:link, &:visited {
+      color: rgb(36,40,25);
+    }
+    &:active, &:hover, &:focus {
+      color: #000;
+    }
+  }
+  .leaflet-popup-content {
+    margin: 0;
+  }
+  article {
+    position: relative;
+
+    div, header {
+      padding: 1em;
+      border-bottom: 1px solid rgb(213,213,211)
+    }
+    .agency {
+      border: none;
+    }
+  }
+  header {
+    text-align: center;
+  }
+  h1, h2, h3, b {
+    font-weight: 700;
+  }
+  h1, h2, h3, p {
+    margin: 0;
+  }
+  h1, .status {
+    text-transform: uppercase;
+  }
+  h1 {
+    margin-bottom: .1em;
+  }
+  h2 {
+    margin-bottom: .2em;
+    font-weight: 400;
+  }
+  .status {
+    font-size: 1.2em;
+  }
+  h3 {
+    margin-bottom: .5em;
+  }
+  a[rel=external] {
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
+  }
+}
