--- a/app/views/popup.html
+++ b/app/views/popup.html
@@ -5,15 +5,17 @@
     <b class="status">{{incident.status}}</b>
   </header>
   <div class="time">
-    <b>First seen</b><span class="firstSeen">{{incident.firstSeen}}</span>
+    <b>First seen:</b> <span class="firstSeen">{{incident.firstSeen | date:'EEE d MMM yyyy hh:mm:ss'}}</span>
     <br />
-    <b>Last update</b><span class="lastUpdate">{{incident.pubdate}}</span>
+    <b>Last update:</b> <span class="lastUpdate">{{incident.pubdate | date:'EEE d MMM yyyy hh:mm:ss'}}</span>
   </div>
   <div class="location">
     <h3>Location</h3>
-    <span class="size">{{incident.size}}</span>
     <p>{{incident.location}}</p>
-    <span class="council">{{incident.councilArea}}</span>
+    <br />
+    <b>Size:</b> <span class="size">{{incident.size}}</span>
+    <br />
+    <b>Council:</b> <span class="council">{{incident.councilArea}}</span>
   </div>
   <div class="agency">
     <h3>Responsible agency</h3>
