--- a/app/views/popup.html
+++ b/app/views/popup.html
@@ -19,6 +19,7 @@
   <div class="location">
     <h3>Location</h3>
     <p>{{incident.location}}</p>
+    <distance-from />
     <b>Size:</b> <span class="size">{{incident.size}}</span>
     <br />
     <b>Council:</b> <span class="council">{{incident.councilArea}}</span>
