--- a/app/views/popup.html
+++ b/app/views/popup.html
@@ -1,32 +1,32 @@
 <article class="incident">
   <header>
-    <h1 ng-if="incident.category !== 'Not Applicable'">{{incident.category}}</h1>
-    <h2>{{incident.title}}</h2>
-    <b class="type">{{incident.fireType}}</b>
+    <h1 ng-if="incident.properties.category !== 'Not Applicable'">{{incident.properties.category}}</h1>
+    <h2>{{incident.properties.title}}</h2>
+    <b class="type">{{incident.properties.fireType}}</b>
     <br />
-    <b class="status">{{incident.status}}</b>
+    <b class="status">{{incident.properties.status}}</b>
   </header>
   <div class="time">
     <div>
       <h3>Last update</h3>
-      <time class="lastUpdate" am-time-ago="incident.pubdate" datetime="{{incident.pubdate}}"></time>
+      <time class="lastUpdate" am-time-ago="incident.properties.pubdate" datetime="{{incident.properties.pubdate}}"></time>
     </div>
     <div>
       <h3>First seen</h3>
-      <time class="firstSeen" am-time-ago="incident.firstSeen" datetime="{{incident.firstSeen}}"></time>
+      <time class="firstSeen" am-time-ago="incident.properties.firstSeen" datetime="{{incident.properties.firstSeen}}"></time>
     </div>
   </div>
   <div class="location">
     <h3>Location</h3>
-    <p>{{incident.location}}</p>
+    <p>{{incident.properties.location}}</p>
     <distance-from />
-    <b>Size:</b> <span class="size">{{incident.size}}</span>
+    <b>Size:</b> <span class="size">{{incident.properties.size}}</span>
     <br />
-    <b>Council:</b> <span class="council">{{incident.councilArea}}</span>
+    <b>Council:</b> <span class="council">{{incident.properties.councilArea}}</span>
   </div>
   <div class="agency">
     <h3>Responsible agency</h3>
-    <span>Rural Fire Service</span>
+    <span>{{incident.properties.responsibleAgency}}</span>
   </div>
-  <a href="{{incident.link}}" title="View on the RFS website" rel="external">View on RFS</a>
+  <a href="{{incident.properties.link}}" title="View on the RFS website" rel="external">View on RFS</a>
 </article>
