--- a/app/views/popup.html
+++ b/app/views/popup.html
@@ -19,7 +19,8 @@
   <div class="location">
     <h3>Location</h3>
     <p>{{incident.properties.location}}</p>
-    <distance-from />
+    <distance-from longitude="{{point.longitude}}" latitude="{{point.latitude}}"></distance-from>
+    <br />
     <b>Size:</b> <span class="size">{{incident.properties.size}}</span>
     <br />
     <b>Council:</b> <span class="council">{{incident.properties.councilArea}}</span>
