--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,5 +1,11 @@
 <a href="/map">Show map</a>
 
 <ul>
-  <li ng-repeat="incident in incidents">{{incident.properties.title}}</li>
+  <li ng-repeat="incident in incidents">
+    <article id="incident_{{incident.id}}">
+      <span class="alertLevel">{{incident.properties.alertLevel}}</span>
+      <h1>{{incident.properties.title}}</h1>
+      <span class="distanceFrom">{{incident.distanceFromUser}}</span>
+    </article>
+  </li>
 </ul>
