--- a/app/styles/components/_incident_mini.scss
+++ b/app/styles/components/_incident_mini.scss
@@ -1,6 +1,29 @@
 // Small incident details (list item, future popup)
 .incidentMini {
-  h1 {
+  display: -webkit-flex;
+  display: flex;
+
+  > * {
+    box-sizing: border-box;
+    padding: .5em 1em;
+  }
+  abbr {
+    border-bottom: none;
+  }
+  abbr, span {
     display: inline-block;
+    text-align: center;
+  }
+  .alertLevel {
+    width: 4em;
+  }
+  h1 {
+    -webkit-flex: 1;
+    flex: 1;
+    font-size: 1em;
+    margin: 0;
+  }
+  .distanceFrom {
+    width: 6em;
   }
 }
