--- a/app/views/list.html
+++ b/app/views/list.html
@@ -3,9 +3,9 @@
 <ul class="incidentListing">
   <li ng-repeat="incident in incidents">
     <article class="incidentMini" id="incident_{{incident.id}}">
-      <span class="alertLevel">{{incident.properties.alertLevel}}</span>
+      <abbr class="alertLevel" title="Alert level: {{incident.properties.alertLevel}}">{{incident.properties.alertLevel | simplifyAlertLevel}}</abbr>
       <h1>{{incident.properties.title}}</h1>
-      <span class="distanceFrom">{{incident.distanceFromUser/1000}}km</span>
+      <span class="distanceFrom">{{incident.distanceFromUser | km}}</span>
     </article>
   </li>
 </ul>
