Popup is mini too. DRY. Some general tweaks.

--- a/app/views/popup.html
+++ b/app/views/popup.html
@@ -1,32 +1,1 @@
-<article class="incident">
-  <header>
-    <h1 ng-if="incident.properties.category !== 'Not Applicable'">{{incident.properties.category}}</h1>
-    <h2>{{incident.properties.title}}</h2>
-    <b class="type">{{incident.properties.fireType}}</b>
-    <br />
-    <b class="status">{{incident.properties.status}}</b>
-  </header>
-  <div class="time">
-    <div>
-      <h3>Last update</h3>
-      <time class="lastUpdate" am-time-ago="incident.properties.pubdate" datetime="{{incident.properties.pubdate}}"></time>
-    </div>
-    <div>
-      <h3>First seen</h3>
-      <time class="firstSeen" am-time-ago="incident.properties.firstSeen" datetime="{{incident.properties.firstSeen}}"></time>
-    </div>
-  </div>
-  <div class="location">
-    <h3>Location</h3>
-    <p>{{incident.properties.location}}</p>
-    <br />
-    <b>Size:</b> <span class="size">{{incident.properties.size}}</span>
-    <br />
-    <b>Council:</b> <span class="council">{{incident.properties.councilArea}}</span>
-  </div>
-  <div class="agency">
-    <h3>Responsible agency</h3>
-    <span>{{incident.properties.responsibleAgency}}</span>
-  </div>
-  <a href="{{incident.properties.link}}" title="View on the RFS website" rel="external">View on RFS</a>
-</article>
+<incident-mini />
