--- a/app/views/list.html
+++ b/app/views/list.html
@@ -2,10 +2,6 @@
 
 <ul class="incidentListing">
   <li ng-repeat="incident in incidents">
-    <article class="incidentMini" id="incident_{{incident.id}}">
-      <abbr class="alertLevel" title="Alert level: {{incident.properties.alertLevel}}">{{incident.properties.alertLevel | simplifyAlertLevel}}</abbr>
-      <h1>{{incident.properties.title}}</h1>
-      <span class="distanceFrom">{{incident.distanceFromUser | km}}</span>
-    </article>
+    <incident-mini />
   </li>
 </ul>
