Add a super minimal header.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,7 @@
 // bower:scss
 // endbower
 
+@import "components/header";
 @import "components/incident_listing";
 @import "components/incident_mini";
 @import "components/incident_popup";
