Shuffle styles. Style the detail view basically.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 // endbower
 
 @import "components/header";
+@import "components/incident_detail";
 @import "components/incident_listing";
 @import "components/incident_mini";
 @import "components/incident_popup";
