--- a/app/views/detail.html
+++ b/app/views/detail.html
@@ -1,4 +1,4 @@
-<article class="incident">
+<article class="incidentDetail">
   <header>
     <h1 ng-if="incident.properties.category !== 'Not Applicable'">{{incident.properties.category}}</h1>
     <h2>{{incident.properties.title}}</h2>
