--- a/app/views/incident_mini.html
+++ b/app/views/incident_mini.html
@@ -1,7 +1,13 @@
 <article class="incidentMini" id="incident_{{incident.id}}">
   <a href="/incidents/{{incident.id}}" title="View incident details">
     <abbr class="alertLevel" title="Alert level: {{incident.properties.alertLevel}}">{{incident.properties.alertLevel | simplifyAlertLevel}}</abbr>
-    <h1>{{incident.properties.title}}</h1>
+    <div>
+      <h1>{{incident.properties.title}}</h1>
+      <h2>
+        {{incident.properties.fireType}},
+        {{incident.properties.status}}
+      </h2>
+    </div>
     <span class="distanceFrom">{{incident.distanceFromUser | km}}</span>
   </a>
 </article>
