--- a/app/styles/components/_incident_listing.scss
+++ b/app/styles/components/_incident_listing.scss
@@ -3,4 +3,9 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  border-bottom: 1px solid rgb(213,213,211);
+
+  > li {
+    border-top: 1px solid rgb(213,213,211);
+  }
 }
