--- a/app/styles/components/_incident_mini.scss
+++ b/app/styles/components/_incident_mini.scss
@@ -10,6 +10,9 @@
       box-sizing: border-box;
       padding: .5em 1em;
     }
+    &:active, &:hover, &:focus {
+      background: rgba(255,255,255,0.9);
+    }
   }
   abbr {
     border-bottom: none;
@@ -21,11 +24,16 @@
   .alertLevel {
     width: 4em;
   }
-  h1 {
-    -webkit-flex: 1;
-    flex: 1;
+  h1, h2 {
     font-size: 1em;
     margin: 0;
+  }
+  h2 {
+    font-weight: normal;
+  }
+  div {
+    -webkit-flex: 1;
+    flex: 1;
   }
   .distanceFrom {
     width: 6em;
