--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -4,6 +4,9 @@ header.global {
 
   h1 {
     font-size: 1em;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    font-weight: 400;
   }
   h1, nav {
     display: inline-block;
