More tweaks of styles.

--- a/app/views/incident_mini.html
+++ b/app/views/incident_mini.html
@@ -4,8 +4,8 @@
     <div>
       <h1>{{incident.properties.title}}</h1>
       <h2>
-        {{incident.properties.fireType}},
-        {{incident.properties.status}}
+        {{incident.properties.status}},
+        {{incident.properties.fireType}}
       </h2>
       <span class="lastUpdate">
         Last update
