--- a/app/styles/components/_incident_mini.scss
+++ b/app/styles/components/_incident_mini.scss
@@ -9,7 +9,7 @@
     > {
       * {
         box-sizing: border-box;
-        padding: .5rem 1rem;
+        padding: .7rem 1rem;
       }
       :first-child, :last-child {
         display: inline-block;
@@ -39,10 +39,15 @@
     font-size: 1em;
     margin: 0;
   }
+  h1 {
+    margin-bottom: .2em;
+    font-weight: 400;
+  }
   h2 {
     font-weight: normal;
+    text-transform: uppercase;
   }
-  .distanceFrom {
-    display: block;
+  h2, .lastUpdate {
+    font-size: .8em;
   }
 }
