--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -1,19 +1,37 @@
 header.global {
   text-align: center;
   position: relative;
+  border-bottom: 1px solid rgb(213,213,211);
 
+  h1, a {
+  }
   h1 {
     font-size: 1em;
     text-transform: uppercase;
     letter-spacing: 0.03em;
     font-weight: 400;
+    margin: 0;
+    padding: .7rem 0;
   }
-  h1, nav {
-    display: inline-block;
-  }
-  nav {
+  a {
     position: absolute;
-    right: 1em;
-    top: .5em;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    width: 3rem;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 40%;
+    text-indent: -999em;
+  }
+  .list-link {
+    background-image: url(/images/list.svg);
+  }
+  .map-link {
+    background-image: url(/images/map.svg);
+  }
+  .back-link {
+    background-image: url(/images/arrow-left.svg);
   }
 }
