Don't show distance from user if it isn't set.

--- a/app/views/incident_mini.html
+++ b/app/views/incident_mini.html
@@ -12,6 +12,6 @@
         <time am-time-ago="incident.properties.pubdate" datetime="{{incident.properties.pubdate}}"></time>
       </span>
     </div>
-    <span class="distanceFrom">{{incident.distanceFromUser | km}}</span>
+    <span class="distanceFrom"><span ng-if="incident.distanceFromUser">{{incident.distanceFromUser | km}}</span></span>
   </a>
 </article>
