Bye bye HTML5 mode

--- a/app/views/incident_mini.html
+++ b/app/views/incident_mini.html
@@ -1,5 +1,5 @@
 <article class="incidentMini" id="incident_{{incident.id}}">
-  <a href="/incidents/{{incident.id}}" title="View incident details">
+  <a ng-href="#/incidents/{{incident.id}}" title="View incident details">
     <abbr class="alertLevel" title="Alert level: {{incident.properties.alertLevel}}">{{incident.properties.alertLevel | simplifyAlertLevel}}</abbr>
     <div>
       <h1>{{incident.properties.title}}</h1>
